--- a/src/Components/MainBody/MainBody.css
+++ b/src/Components/MainBody/MainBody.css
@@ -3,25 +3,7 @@
   background-image: url("../../assets/images/Group\ 4.png");
 }
 
-.container-1 {
-  padding-top: 20px;
-  width: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  .adjust-height {
-    height: calc((550px * 2) + 20px);
-  }
-  .subcon-1 {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-}
-
+.container-1,
 .container-2 {
   padding-top: 20px;
   width: 100%;
@@ -31,16 +13,25 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  .subcon-2 {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  .subcon-3 {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
+}
+.adjust-height {
+  height: calc((550px * 2) + 20px);
+}
+.subcon-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.subcon-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.subcon-3 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .container-3 {
@@ -52,13 +43,12 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  .subcon-4 {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-  }
 }
-
+.subcon-4 {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 .container-4 {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -76,33 +66,31 @@
     object-fit: cover;
   }
 
-  .container-1 {
-    flex-direction: column;
-    .adjust-height {
-      height: 550px;
-      width: 325px;
-    }
-    .subcon-1 {
-      img {
-        height: 275px;
-        width: 325px;
-      }
-    }
-  }
-
+  .container-1,
   .container-2 {
     flex-direction: column;
-    .subcon-2 {
-      img {
-        height: 275px;
-        width: 325px;
-      }
+  }
+  .subcon-1 {
+    img {
+      height: 275px;
+      width: 325px;
     }
-    .subcon-3 {
-      img {
-        height: 275px;
-        width: 325px;
-      }
+  }
+  .adjust-height {
+    height: 550px;
+    width: 325px;
+  }
+
+  .subcon-2 {
+    img {
+      height: 275px;
+      width: 325px;
+    }
+  }
+  .subcon-3 {
+    img {
+      height: 275px;
+      width: 325px;
     }
   }
 
